service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ctfd-app
  namespace: ctfd
spec:
  type: LoadBalancer
  selector:
    app: ctfd-app
  sessionAffinity: None
  ports:
  - port: 8000
    targetPort: 8000
